source/stylesheets/main.css.scss
body {
  background: #f8f8f8;
  font: normal 100% "museo";
}

*, *:before, *:after {
  -moz-box-sizing: border-box; -webkit-box-sizing: border-box; box-sizing: border-box;
}

header {
  background: #fff;
  border-bottom: 1px solid #e6e6e6;
  padding: 1.625em 5%;
  width: 100%;
}

h2 {
  color: #333;
  font: normal 1.728em "futura-pt";
  font-weight: 700;
  margin: 0.64em 0 0.625em 0;
  text-transform: uppercase;
}

h3 {
  border: 3px solid #ed5f16;
  color: #ed5f16;
  display: inline-block;
  font: normal 0.833em "futura-pt";
  font-weight: 700;
  letter-spacing: 2px;
  padding: 0.3125em 1.25em 0.625em;
  text-transform: uppercase;
}

strong {
  font-weight: bold;
}

.logo {
  color: #bbb;
  font: normal 1.05em "futura-pt";
  font-weight: 700;
  letter-spacing: 5px;
  margin-right: -5px;
  text-transform: uppercase;
}
  .logo a {
    color: #bbb;
    text-decoration: none;
  }

.sidebar {
  float: left;
  padding: 5% 5%;
  width: 40%;
}
  .avatar {
    border-radius: 100px;
    height: 100px;
    width: 100px;
  }
  .sidebar p {
    color: #333;
    font: normal 2.986em "futura-pt";
  }

.project-list {

}
  .project-list a {
    color: #2c94d1;
    text-decoration: none;
  }
  .project-list h3 {
    color: #aaa;
    border: none;
    border-bottom: 1px solid #eee;
    margin: 1.2em 0 0 0;
    padding: 0 0 0.625em 0;
    width: 100%;
  }
  .project-list ul {
    margin: 1.2em 0 0 0;
  }
    .project-list ul li {
      float: left;
      font-weight: 700;
      margin: 0 0 0 0.625em;
    }
      .project-list ul li:first-child {
        margin-left: 0;
      }

.portfolio-button {
  -moz-appearance: none;
  -webkit-appearance: none;
  appearance: none;
  background: #ed531b !important;
  border: none !important;
  border-radius: 5px !important;
  -moz-box-shadow:    0 4px 0 0 #ca3501 !important;
  -webkit-box-shadow: 0 4px 0 0 #ca3501 !important;
  box-shadow:         0 4px 0 0 #ca3501 !important;
  color: #fff !important;
  cursor: pointer !important;
  display: block;
  font: 700 1.5rem "futura-pt" !important;
  margin: 1rem 0 0 0;
  padding: 1rem 0 !important;
  text-align: center;
  width: 100% !important;
  &:hover {
    background: #f5551e !important;
  }
}

.main {
  float: right;
  padding: 5% 5%;
  width: 60%;
}

.articles {
  margin: 4.3em 0 0 0;
  text-align: left;
}
  .articles:first-child {
    margin-top: 0;
  }
  .date {
    color: #aaa;
    font: italic 1em "museo";
    margin: 1.2em 0 0 0;
  }
  .articles h2 {
    margin-top: 0.694em;
  }
  .articles h2 a {
    color: #333;
    text-decoration: none;
  }
  .articles p {
    color: #555;
    font: normal 1.2em "museo";
    line-height: 170%;
    margin: 0.694em 0 0 0;
  }

.single-article {
  padding: 0 20% 4.3em;
  width: 100%;
}
 .single-article h2 {
   font-size: 2.986em;
 }
 .single-article h4 {
   color: #555;
   border: none;
   margin: 2.074em 0 0 0;
   padding: 0;
   font: normal 1.44em "futura-pt";
   font-weight: 700;
   letter-spacing: 2px;
   text-transform: uppercase;
 }
 .gist-file{
   border-bottom: none !important;
   margin-top: 2.074em;
   margin-bottom: 2.074em !important;
 }
 .gist-meta {
   display: none;
   padding: 0;
 }

/* misc */
.separator {
  background: #ddd;
  display: block;
  height: 3px;
  margin: 1.25em 0 0 0;
  width: 60px;
}

/* clearfix */
.clearfix:before,
.clearfix:after {
  content: " "; /* 1 */
  display: table; /* 2 */
}

.clearfix:after {
  clear: both;
}

/* Media Queries */
@media screen and (max-width: 1260px) {
  .sidebar {
    font-size: 80%;
  }
}

@media screen and (max-width: 1080px) {
  .single-article h2 {
    font-size: 2.488em;
  }
}

@media screen and (max-width: 1000px) {
  .sidebar {
    font-size: 70%;
  }
}

@media screen and (max-width: 880px) {
  header {
    text-align: center;
  }

  .sidebar {
    float: none;
    font-size: 100%;
    width: 100%;
    text-align: center;
  }

  .project-list ul {
    border-bottom: 1px solid #eee;
    padding-bottom: 1.2em;
  }

  .project-list ul li {
    display: inline;
    float: none;
  }

  .main {
    float: none;
    padding-bottom: 4.3em;
    padding-top: 2.986em;
    width: 100%;
    text-align: center;
  }
  
  .articles {
    margin-top: 2.986em;
  }

  .single-article {
    padding: 0 5% 4.3em;
  }
}

/* @media screen and (max-width: 870px) { */
/*   .single-article h2 { */
/*     font-size: 2.074em; */
/*   } */
/* } */

@media screen and (max-width: 500px) {
  /* .single-article h2 { */
  /*   font-size: 1.728em; */
  /* } */

  .single-article h4 {
    font-size: 1.2em;
  }
}

@media screen and (max-width: 430px) {
  h2 {
    font-size: 1.2em;
  }

  .single-article h4 {
    font-size: 1em;
  }

  .sidebar p {
    font-size: 2.074em;
  }

  .articles p {
    font-size: 1em;
  }
}

